# robotrainer_user_performance

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  README.md  package.xml
classical_user_performance/: CMakeLists.txt  classical_user_performance.kdev4  difficulty_01.yaml  package.xml
classical_user_performance/cfg/: UserPerfomance.params  UserStudyManager.cfg
classical_user_performance/example_configs/: user_study_manager.yaml
classical_user_performance/launch/: classical_user_performance.launch  user_study_manager.launch
classical_user_performance/misc/: A1.yaml  A2.yaml  Paths.ipynb  graphs.ipynb  stdtest.py
classical_user_performance/msg/: FeatureCharacteristics.msg  StudyStatus.msg
classical_user_performance/scripts/: user_study_manager.py
classical_user_performance/src/: DataFormats.py  PublisherHandler.py  SubscriptionHandler.py  Untitled.ipynb  UserEvaluation.py  user_performance.py
data/: .~lock.diff_def.csv#  ability_mapper2.p  ability_mapper_force.p  ability_mapper_velocity.p  def_env_velocity.p  heika_path2.csv  heika_path4.csv  heika_path6.csv  irt_parameters_deviation.p  irt_parameters_tremble.p  irt_parameters_velocity.p
launch/: user_performance_from_bag.launch
robotrainer_deviation/: CMakeLists.txt  package.xml  robotrainer_deviation.kdev4
robotrainer_deviation/include/robotrainer_deviation/: robotrainer_deviation.h
robotrainer_deviation/launch/: robotrainer_deviation.launch
robotrainer_deviation/src/: robotrainer_deviation.cpp  robotrainer_deviation_node.cpp
robotrainer_heika_classification/: CMakeLists.txt  package.xml
robotrainer_heika_classification/data/: ability_mapper_deviation.p  ability_mapper_tremble.p  def_env_deviation.p  def_env_force.p  def_env_tremble.p  diff_def.csv  heika_path1.csv  heika_path3.csv  heika_path5.csv  heika_path6.csv  irt_parameters_force.p
robotrainer_heika_classification/launch/: user_performance_from_bag.launch
robotrainer_heika_classification/scripts/: user_performance.py
robotrainer_user_perfomance_parameters_calculation/: CMakeLists.txt  package.xml
robotrainer_user_performance/: CMakeLists.txt  package.xml  robotrainer_classical_user_performence.py
scripts/: user_performance.py
