<?xml version="1.0"?>
<package format="2">
  <name>robotrainer_user_performance</name>
  <version>0.0.1</version>
  <description>Package for calcuation of users' performance when using RoboTrainer.</description>

  <maintainer email="denis.stogl@kit.edu">Denis Štogl</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>IPR-Licence</license>


  <!-- Url tags are optional, but multiple are allowed, one per tag -->
  <!-- Optional attribute type can be: website, bugtracker, or repository -->
  <!-- Example: -->
  <!-- <url type="website">http://wiki.ros.org/robotrainer_user_performance</url> -->


  <!-- Author tags are optional, multiple are allowed, one per tag -->
  <!-- Authors do not have to be maintainers, but could be -->
  <!-- Example: -->
  <author email="denis.stogl@kit.edu">Denis Štogl</author>


  <buildtool_depend>catkin</buildtool_depend>
  <depend>robotrainer_user_perfomance_parameters_calculation</depend>
  <exec_depend>robotrainer_heika_classification</exec_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->
    <metapackage/>
  </export>
</package>
